--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=library-management-system
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://library-management-sales-management-system.g.aivencloud.com:24739/defaultdb
 spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_m73zCbpdHf1Mwq75WMk
+spring.datasource.password=PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
